[package]
name = "corematch"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/turboflakes/corematch"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Corematch is a memory game where the player has to match the latest Polkadot cores usage in a 4x4 matrix."
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
yew = { version = "0.20", features = ["csr"] }
subxt = { version = "0.32.1", default-features = false, features = ["jsonrpsee", "web", "unstable-light-client"], target_arch = "wasm32" }
futures = "0.3.28"
anyhow = "1.0.71"
strum = "0.17.1"
strum_macros = "0.17.1"
serde_json = "1.0.68"
log = "0.4"
wasm-logger = "0.2.0"

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "EventTarget",
]

# https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-size