[package]
name = "corematch"
version = "0.1.0"
license = "Apache-2.0"
repository = "https://github.com/turboflakes/corematch"
authors = ["Paulo <paulo@turboflakes.io>"]
description = "Corematch is a memory game where the player has to match the latest Polkadot core usage in a 4x4 matrix."
edition = "2021"

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
wasm-logger = "0.2.0"
yew = { version = "0.21", features = ["csr"] }
yew-hooks = "0.3.0"
subxt = { version = "0.34", default-features = false, features = ["jsonrpsee", "web", "unstable-light-client"], target_arch = "wasm32" }
sp-core-hashing = "12.0.0"
futures = "0.3.28"
anyhow = "1.0.71"
strum = "0.17.1"
strum_macros = "0.17.1"
serde = "1.0.163"
serde_json = "1.0.96"
log = "0.4"
rand = "0.8.5"
hex = "0.4.3"
js-sys = "0.3.66"
gloo = "0.11.0"

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "FocusEvent",
    "DomRect",
    "EventTarget",
]

# https://rustwasm.github.io/book/reference/code-size.html#optimizing-builds-for-code-size
