[package]
name = "corematch-app"
version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
wasm-logger = { workspace = true }
yew = { workspace = true }
yew-router = { workspace = true }
yew-hooks = { workspace = true }
subxt = { workspace = true }
sp-core-hashing = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
js-sys = { workspace = true }
gloo = { workspace = true }
corematch-common = { path = "../common" }
corematch-kusama = { path = "../kusama" }
corematch-polkadot = { path = "../polkadot" }

[dependencies.web-sys]
version = "0.3"
# We need to enable the `DomRect` feature to use the
# `get_bounding_client_rect` method.
features = [
    "console",
    "HtmlElement",
    "MouseEvent",
    "FocusEvent",
    "DomRect",
    "EventTarget",
]